<resources>
    <string name="app_name">Teaerastore</string>
    <string name="empty"></string>
    <string name="store_location">Store Location</string>
    <string name="password">Password</string>
    <string name="enter_password">Please enter your password.</string>
    <string name="menu_new_orders">NEW ORDERS</string>
    <string name="menu_completed_orders">COMPLETED ORDERS</string>
    <string name="menu_search">SEARCH</string>
    <string name="menu_store_profile">STORE PROFILE</string>
    <string name="menu_signout">SIGN OUT</string>
    <string name="empty_search_options">Please choose search options.</string>
    <string name="error_date_search">Please choose both date.</string>
    <string name="refund_button">Refund</string>
    <string name="subtotal">Subtotal</string>
    <string name="rewards_credit">Rewards Credit</string>
    <string name="tax">Tax</string>
    <string name="total">Total</string>
    <string name="rewards">Rewards</string>
    <string name="order_new">NEW</string>
    <string name="order_progress">In Progress</string>
    <string name="order_ready">Ready for Pickup</string>
    <string name="order_completed">Completed</string>
    <string name="store_info">STORE INFO</string>
    <string name="current_wait_time">Current Wait Time</string>
    <string name="open_hour">Opening Hour</string>
    <string name="close_hour">Closing Hour</string>
    <string name="print_report">Print Report</string>
    <string name="report_from">From:</string>
    <string name="report_to">to</string>
    <string name="error_closing_hour">Choose valid closing hour.</string>
    <string name="error_print_date">Please choose date.</string>
    <string name="error_date_range">You can choose date within a month. Please choose again.</string>
    <string name="no_print_date">There is no orders within date.</string>
    <string name="error_date">Please choose date range again.</string>
    <string name="refund">REFUND</string>
    <string name="select_all">SELECT ALL</string>
    <string name="process_button">Process</string>
    <string name="auth_code_title">AUTHORIZATION CODE</string>
    <string name="redeemed_free_drink">Redeemed Free Drink</string>
    <string name="total_refund">Total Refund</string>
    <string name="enter_authcode">Please enter authorize code.</string>
    <string name="refund_confirm">Refund Confirmed on </string>
    <string name="cutomer_info">CUSTOMER INFO</string>
    <string name="add_reward_button">Add Rewards to Account</string>
    <string name="add_rewards">ADD REWARDS</string>
    <string name="choose_rewards">Please choose rewards.</string>
    <string name="search">SEARCH</string>
    <string name="internet_error">You don\'t have a network right now. Please try connecting your device to the internet.</string>
    <string name="menu_settings">Settings</string>
    <string name="button_print">Print</string>
    <string name="button_printer_settings">Printer Settings</string>
    <string name="button_update_firm">Update Firm</string>
    <string name="button_transfer_template">Transfer Template</string>
    <string name="button_get_firmver">Get Firm Version</string>
    <string name="button_get_mediaver">Get Media Version</string>
    <string name="button_get_serialnum">Get Serial Number</string>
    <string name="button_get_systemreport">Get System Report</string>
    <string name="button_get_batteryInfo">Get Battery Info</string>
    <string name="button_send_mediainfo">Send Media Info</string>
    <string name="button_check_firm_file">Check Firm File Ver</string>
    <string name="button_check_media_file">Check Media File Ver</string>
    <string name="button_remove_template">Remove Template</string>
    <string name="button_select_file">Select File</string>
    <string name="button_select">Select</string>
    <string name="button_add">Add</string>
    <string name="button_delete">Delete</string>
    <string name="button_get_list">Get List</string>
    <string name="button_bluetooth_settings">Bluetooth Settings</string>
    <string name="button_network_settings">Network Settings</string>
    <string name="button_device_settings">Device Settings</string>
    <string name="supported_device">PJ-7XX/RJ-4030Ai/RJ-2XXX</string>
    <string name="mw_series">MW Series</string>
    <string name="file_explorer_title">File Explorer</string>
    <string name="button_printer_status">Printer Status</string>
    <string name="button_send_binfile">Send File</string>
    <string name="button_multi_print">Multi Print</string>
    <string name="text_select_pdz">Select a pdz or blf file</string>
    <string name="text_select_image">Select image/prn file</string>
    <string name="text_input_data">Input Data:</string>
    <string name="text_template_Index">Index:</string>
    <string name="text_template_name">Name:</string>
    <string name="text_template_text">Text:</string>
    <string name="text_template_key">Template Key:</string>
    <string name="text_template_replace_texts">Replace Texts:</string>
    <string name="text_select_pdf">Select a pdf file</string>
    <string name="text_pdf_pages_start">Start Page:</string>
    <string name="text_pdf_pages_end">End Page:</string>
    <string name="chkbox_multiple_select">Multiple Select</string>
    <string name="chkbox_all_pages">All pages</string>
    <string name="text_print_image">Print Image/Prn File</string>
    <string name="text_print_pdf">Print Pdf File</string>
    <string name="text_print_template">Print Template</string>
    <string name="text_transfer_manager">Manage Templates</string>
    <string name="text_transfer_pdz">Transfer Template File</string>
    <string name="text_device_setting">Device Settings</string>
    <string name="text_remove_template">Remove Template File</string>
    <string name="text_not_exit_template">Template does not exit.</string>
    <string name="unable_access">Unable Access…</string>
    <string name="no_network_device">No Net Printer Found</string>
    <string name="setting_printer">Basic Settings</string>
    <string name="printer_title">Printer</string>
    <string name="printer_text">Select a destination printer</string>
    <string name="setting_label">Settings</string>
    <string name="about_label">About</string>
    <string name="about_title">Brother Print Sdk Demo</string>
    <string name="about_text">Ver.3.0.13\n© 2018 Brother Industries, Ltd.\n</string>
    <string name="netPrinterListTitle_label">Net Printer</string>
    <string name="progress_dialog_message_preparing_connection">Preparing the connection…</string>
    <string name="progress_dialog_message_createData">Creating the data</string>
    <string name="progress_dialog_message_sendingData">Sending the data…</string>
    <string name="progress_dialog_message_sendingPrintingData">Sending the data…</string>
    <string name="progress_dialog_message_startPrint">Printing the data </string>
    <string name="progress_dialog_message_dataSent">The data was sent </string>
    <string name="progress_dialog_message_printed">The printing process was completed </string>
    <string name="progress_dialog_message_close_connection">Closing the connection</string>
    <string name="progress_dialog_message_set_paper">Please Set Paper</string>
    <string name="progress_dialog_message_cooling_start">Printer cooling start</string>
    <string name="progress_dialog_message_cooling_end">Printer cooling end</string>
    <string name="progress_dialog_message_waiting_peel">Wait for peeling label</string>
    <string name="progress_dialog_message_sending_template">File transferring</string>
    <string name="progress_dialog_message_getting_bluetooth_setting">Getting Bluetooth settings </string>
    <string name="progress_dialog_message_setting_bluetooth_setting">Transferring Bluetooth settings </string>
    <string name="progress_dialog_message_removing_template">Removing templates </string>
    <string name="progress_dialog_message_getting_template">Getting template list </string>
    <string name="error_message_none">Succeeded</string>
    <string name="error_message_runtime">Runtime error occurred </string>
    <string name="printer_model_title">PrinterModel</string>
    <string name="printer_model_value">Select the printer model </string>
    <string name="error_message_weong_os">Android OS is not supported</string>
    <string name="error_message_no_usb">USB device is not found</string>
    <string name="port_title">Port</string>
    <string name="port_value">Select the port</string>
    <string name="address_title">IP address</string>
    <string name="address_value">Set the number of ip address </string>
    <string name="mac_address_title">MAC address</string>
    <string name="mac_address_value">Set the number of mac address </string>
    <string name="paper_size_title">Paper size</string>
    <string name="paper_size_value">Select the paper size </string>
    <string name="orientation_title">Printing orientation</string>
    <string name="orientation_value">Select the printing orientation </string>
    <string name="trim_tape_after_data_title">Cutting zero lines </string>
    <string name="trim_tape_after_data_value">Select the cutting zero lines</string>
    <string name="tethering_title">Tethering</string>
    <string name="tethering_value">Select the tethering</string>
    <string-array name="orientation">
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>
    <string-array name="orientation_values">
        <item>PORTRAIT</item>
        <item>LANDSCAPE</item>
    </string-array>
    <string name="number_of_copies_title">Number of copies</string>
    <string name="number_of_copies_value">Set the number of copies </string>
    <string name="halftoning_title">Half toning</string>
    <string name="halftoning_value">Select the half toning method </string>
    <string name="overwrite_title">Overwrite the file</string>
    <string name="overwrite_value">Select the overwrite mode </string>
    <string name="image_thresholding_title">Threshold of simple binary</string>
    <string name="image_thresholding_value">Select the threshold </string>
    <string name="scale_value_title">Scale value</string>
    <string name="scale_value_value">Select the scale value </string>
    <string-array name="halfToning">
        <item>Threshold</item>
        <item>Pattern dithering</item>
        <item>Error diffusion</item>
    </string-array>
    <string-array name="halfToningValues">
        <item>THRESHOLD</item>
        <item>PATTERNDITHER</item>
        <item>ERRORDIFFUSION</item>
    </string-array>
    <string name="fit_to_page_title">Fit to page</string>
    <string name="fit_to_page_value">Select if fitting to page </string>
    <string-array name="check_print_end">
        <item>Not check</item>
        <item>Skip last page</item>
        <item>Check</item>
    </string-array>
    <string-array name="check_print_end_values">
        <item>CPE_NO_CHECK</item>
        <item>CPE_SKIP_LAST</item>
        <item>CPE_CHECK</item>
    </string-array>
    <string-array name="fitToPage">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>CUSTOM</item>
        <item>FIT_TO_PAPER</item>
    </string-array>
    <string-array name="fit_to_page_values">
        <item>ORIGINAL</item>
        <item>FIT_TO_PAGE</item>
        <item>SCALE</item>
        <item>FIT_TO_PAPER</item>
    </string-array>
    <string-array name="printer_case">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="printer_case_values">
        <item>PJ_ROLLCASE_OFF</item>
        <item>PJ_ROLLCASE_ON</item>
        <item>PJ_ROLLCASE_WITH_ANTICURL</item>
    </string-array>
    <string-array name="pj_speed_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
</resources>