<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teaera.teaerastore.activities.MainActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:background="@android:color/black"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu_logo" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/logoImageView"
            android:layout_alignLeft="@+id/logoImageView"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/logoImageView"
            android:layout_alignStart="@+id/logoImageView"
            android:lines="2"
            android:text="Cupetino CA"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="12dp"
            android:typeface="serif" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/locationTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/location_button_yellow" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/relativeLayout4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <RelativeLayout
        android:id="@+id/menuRelativeLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/black"
        android:clickable="true"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/relativeLayout4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/close_button" />

        <Button
            android:id="@+id/newOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/closeButton"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_new_orders"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/completedOrderButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/newOrderButton"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_completed_orders"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/completedOrderButton"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_search"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/storeProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/searchButton"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_store_profile"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_size"
            android:typeface="monospace" />

        <Button
            android:id="@+id/signOutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/storeProfileButton"
            android:layout_marginTop="15dp"
            android:background="@android:color/transparent"
            android:text="@string/menu_signout"
            android:textColor="@android:color/white"
            android:textSize="@dimen/menu_size"
            android:typeface="monospace" />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
